added more variables

--- a/CSC8503/CSC8503Common/CSC8503Common.vcxproj
+++ b/CSC8503/CSC8503Common/CSC8503Common.vcxproj
@@ -132,6 +132,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\..\..\Program Files (x86)\OpenAL 1.1 SDK\samples\framework\Win32\CWaves.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\Program Files (x86)\OpenAL 1.1 SDK\samples\renderer\Source\ALOutput.h" />
     <ClInclude Include="AABBVolume.h" />
     <ClInclude Include="BoundingAABB.h" />
     <ClInclude Include="BoundingOOBB.h" />
@@ -168,6 +170,8 @@
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\..\..\Program Files (x86)\OpenAL 1.1 SDK\samples\framework\Win32\CWaves.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Program Files (x86)\OpenAL 1.1 SDK\samples\renderer\Source\ALOutput.cpp" />
     <ClCompile Include="BoundingAABB.cpp" />
     <ClCompile Include="BoundingOOBB.cpp" />
     <ClCompile Include="BoundingSphere.cpp" />
