test window fix

--- a/CSC8503/GameTech/imgui.ini
+++ b/CSC8503/GameTech/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=239,422
+Pos=0,0
 Size=338,111
 Collapsed=0
 
 [Window][wnd2]
 Pos=913,9
 Size=338,92
+Collapsed=0
+
+[Window][power]
+Pos=897,562
+Size=300,100
 Collapsed=0
 
