--- a/CSC8503/GameTech/GameTech.vcxproj
+++ b/CSC8503/GameTech/GameTech.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NetworkedGame.cpp" />
     <ClCompile Include="NetworkPlayer.cpp" />
+    <ClCompile Include="Particles\ParticleEffect.cpp" />
     <ClCompile Include="Sound\AudioEngine.cpp" />
     <ClCompile Include="TutorialGame.cpp" />
   </ItemGroup>
@@ -163,6 +164,7 @@
     <ClInclude Include="imgui_progressbar.h" />
     <ClInclude Include="NetworkedGame.h" />
     <ClInclude Include="NetworkPlayer.h" />
+    <ClInclude Include="Particles\ParticleEffect.h" />
     <ClInclude Include="Particles\Particle.h" />
     <ClInclude Include="Sound\AudioEngine.h" />
     <ClInclude Include="TutorialGame.h" />
