--- a/CSC8503/GameTech/imgui.ini
+++ b/CSC8503/GameTech/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=203,226
-Size=338,111
+Pos=800,450
+Size=1000,1000
 Collapsed=0
 
 [Window][wnd2]
@@ -16,5 +16,20 @@ Collapsed=0
 [Window][power]
 Pos=897,562
 Size=300,100
+Collapsed=0
+
+[Window][Main Menu]
+Pos=424,266
+Size=380,199
+Collapsed=0
+
+[Window][Name]
+Pos=50,550
+Size=1000,1000
+Collapsed=0
+
+[Window][Time Window]
+Pos=650,20
+Size=550,680
 Collapsed=0
 
