--- a/CSC8503/GameTech/GameTech.vcxproj
+++ b/CSC8503/GameTech/GameTech.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="NetworkPlayer.h" />
     <ClInclude Include="Particles\ParticleEffect.h" />
     <ClInclude Include="Particles\Particle.h" />
+    <ClInclude Include="Particles\ParticleEmitter.h" />
     <ClInclude Include="Sound\AudioEngine.h" />
     <ClInclude Include="TutorialGame.h" />
   </ItemGroup>
